[gd_scene load_steps=3 format=3 uid="uid://btg7p8shxwqeg"]

[ext_resource type="Script" path="res://scripts/screens/main_menu.gd" id="1_4d3vi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s27h6"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4d3vi")

[node name="VerticalLayout" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ContentArea" type="PanelContainer" parent="VerticalLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_s27h6")

[node name="Menu" type="PanelContainer" parent="VerticalLayout"]
layout_mode = 2

[node name="MenuLayout" type="HBoxContainer" parent="VerticalLayout/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="ShopButton" type="Button" parent="VerticalLayout/Menu/MenuLayout"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Shop"

[node name="DeckBuilderButton" type="Button" parent="VerticalLayout/Menu/MenuLayout"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Deck"

[node name="HomeButton" type="Button" parent="VerticalLayout/Menu/MenuLayout"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Home"

[node name="FriendsButton" type="Button" parent="VerticalLayout/Menu/MenuLayout"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Clan"

[node name="EventsButton" type="Button" parent="VerticalLayout/Menu/MenuLayout"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Events"

[connection signal="button_up" from="VerticalLayout/Menu/MenuLayout/ShopButton" to="." method="_on_shop_button_button_up"]
[connection signal="button_up" from="VerticalLayout/Menu/MenuLayout/DeckBuilderButton" to="." method="_on_deck_builder_button_button_up"]
[connection signal="button_up" from="VerticalLayout/Menu/MenuLayout/HomeButton" to="." method="_on_home_button_button_up"]
[connection signal="button_up" from="VerticalLayout/Menu/MenuLayout/FriendsButton" to="." method="_on_friends_button_button_up"]
[connection signal="button_up" from="VerticalLayout/Menu/MenuLayout/EventsButton" to="." method="_on_events_button_button_up"]
